--- a/docs/html/pag01Data/estilo/style.css
+++ b/docs/html/pag01Data/estilo/style.css
@@ -52,12 +52,16 @@ main{
 }
 #esca{
     margin:0;
-    padding:5px;
+    border-radius: 15px;
+    height: 25px;
     max-height: 25px;
-    background-color: transparent;
+    border: none;
+    background-color: lightgray;
+    box-shadow: 3px 2px 2px rgba(0, 0, 0, 0.521);
 }
 #esca:hover{
     background-color: gray;
+    cursor: pointer;
 }
 #hora{
     text-align: right;
@@ -174,20 +178,22 @@ img{
 
 .li{
     background-color: #313131;
+    box-shadow: 3px 2px 2px rgba(0, 0, 0, 0.534);
     display: flex;
-    flex-direction: column;
+    text-decoration: none;
     width: 150px;
     height: 45px;
     border-radius: 2px;
     text-align: center;
-    margin: 2px;
+    margin: 10px;
     padding:5px;
-    transition: all 0.3 ease-in-out;
+    transition: all 0.5s ease-in-out;
 
 }
 .li:hover{
-    background-color:transparent;
-    transition: all 0.3 ease-in-out;
+    background-color:#31313196;
+    transition: all 0.4s ease-in-out;
+    transform: translateY(-15%) translateX(20%);
 }
 footer{
     margin: auto;
