--- a/docs/html/ConversorData/estilo/conversor.css
+++ b/docs/html/ConversorData/estilo/conversor.css
@@ -88,6 +88,11 @@ input.in.numb{
     border: 1px solid black;
     
 }
+div.resC{
+    background-color: var(--corfundo);
+    width:100% ;
+    height: 100px;
+}
 section.res{
     background-color: var(--coraux);
     border-radius: 15px;
@@ -173,7 +178,7 @@ section.res{
     }
     section.res {
         background-color: var(--coraux);
-        position: fixed;
+        
         
         color: #fff;
         font-size: 30px;
@@ -181,22 +186,25 @@ section.res{
         border-radius: 15px;
     
         display: none;
-        position: relative;
-        top: 100%;
-        width: 150px;
+        
+        top: 90%;
+        width: 100px;
         height: 50px;
         }
     
     .res.active 
     {
-    background-color: var(--corfundo);
-    width: 100%;
+    position: absolute;
+    left: 40%;
+    margin: 0;
+    background-color:rgb(3, 164, 204) ;
+    width: 100px;
     display: flex;
     align-items: center;
     text-align: center;
     height: 100px;
     border-radius: 0px 0px 0px 0px;
-    
+
     }
     div.ext2.lat{
         height: 0;
