--- a/docs/html/pag01Data/estilo/style.css
+++ b/docs/html/pag01Data/estilo/style.css
@@ -184,7 +184,7 @@ div.hidden2.active{
 
 /*Seta*/
 div.ler2{
-    background-image: url('fundoParallax/setaPraBaixo\ \(2\).png');
+    background-image: url('fundoParallax/setaPraBaixo (2).png');
     background-repeat: no-repeat;
     background-size: contain;
     height: 150px;
@@ -236,7 +236,7 @@ div.hidden2>h2{
 div.eta{
     width: 700px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 ul{
     display: inline-block;
@@ -285,6 +285,14 @@ li.item.HTML {
     font-size: 1.5em;
     font-weight: bolder;
     background-color: #F16A30;
+}
+li.item.algo{
+    text-align: center;
+    font-size: 1em;
+    font-weight: bolder;
+}
+li.item.proj{
+    height: fit-content;
 }
 li.cat:hover{
     transform: none;
@@ -336,7 +344,7 @@ footer{
         flex-direction: row;
     }
 }
-/*
+
 @media (max-width:1200px) 
 {
     body
@@ -345,6 +353,7 @@ footer{
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
+        height: 98vh;
     }
     .apresent>span{
         width: 1px;
@@ -359,6 +368,8 @@ footer{
         display: flex;
         flex-direction: column;
     }
-
+    main{
+        height: 98vh;
+        width: 98vw;
+    }
 }
-*/
