--- a/docs/html/formularioData/estilo/style.css
+++ b/docs/html/formularioData/estilo/style.css
@@ -14,6 +14,10 @@
 body{
     background-color: var(--corfundo);
     position: relative;
+    background: url(imagens/laranjas.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 header{
@@ -44,19 +48,26 @@ p{
     padding: 10px;
     border-radius: 5px;
 }
+p.A{
+    margin-bottom: 5%;
+    padding: 15px;
+}
+p.B{
+    margin-top: 10%;
+}
 p.text{
+    position: absolute;
     width: 250px;
 }
 div.parallax{
     
-    height: 70%;
-    width: 70%;
+    height: 100%;
+    width: 100%;
     background-image: url(imagens/laranjas.jpg);
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
     background-attachment: fixed;
-    position: absolute;
-    right: 5%;
+    right: 0;
     top: 21%;
 }
 h4, select{
@@ -72,6 +83,10 @@ h4:hover, select:hover{
 select{
     color: #FFF;
     border: none;
+}
+img{
+    top: 1%;
+    position: absolute;
 }
 a{
     background-color: var(--cor2);
