--- a/docs/html/pag01Data/estilo/style.css
+++ b/docs/html/pag01Data/estilo/style.css
@@ -236,7 +236,10 @@ div.hidden2>h2{
 div.eta{
     width: 700px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    left:15vw;
+    position:absolute;
+    
 }
 ul{
     display: inline-block;
