--- a/docs/html/timerData/style/style.css
+++ b/docs/html/timerData/style/style.css
@@ -35,6 +35,36 @@ div.CLeft
     padding: 10px;
 }
 
+div.CMid{
+        background-color: #fff56c62;
+        border-radius: 15px;
+        margin: 15px;
+        width: -moz-fit-content;
+        width: fit-content;
+        height: -moz-fit-content;
+        height: fit-content;
+        padding: 10px;
+        display: flex;
+        flex-direction: column;
+}
+div.CronoContainer{
+    font-size: 25px;
+}
+
+
+span.crono{
+        background-color: #926f22;
+        border-radius: 5px;
+        box-shadow: 5px 2px 5px rgba(0, 0, 0, 0.336);
+        padding: 10px;
+        border: none;
+        width: 100px;
+        height: 70px;
+        font-size: 25px;
+        margin: 2px;
+        font-family: "Inconsolata";
+}
+
 div.CCntr{
     position: absolute;
     right: 20%;
@@ -63,6 +93,7 @@ input[type=number] {
 }
 div.timerC{
     margin-bottom:5px;
+    font-size: 90px;
 }
 input.tInp{
     background-color: #926f22;
@@ -87,6 +118,9 @@ button.btn{
     border: none;
     border-radius: 10px;
     box-shadow: 1px 3px 3px rgba(0, 0, 0, 0.5);
+}
+button.btn.cr{
+    margin-top: 15px;
 }
 button.btn.nt{
     font-size: 20px;
