--- a/docs/html/pag01Data/estilo/style.css
+++ b/docs/html/pag01Data/estilo/style.css
@@ -249,7 +249,7 @@ li.item{
     box-shadow: 3px 2px 2px rgba(0, 0, 0, 0.534);
     display: flex;
     width: 150px;
-    height: 60px;
+    height: fit-content;
     border-radius: 2px;
     margin: 10px;
     padding:5px;
